Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-16612

[REG 4.1 beta -> 4.1 rc] Crash when canceling git clone

XMLWordPrintable

      1. open QC
      2. trigger 'New File or Project...' -> Import Project -> Git Clone
      3. enter valid URL and so on, start cloning
      4. Cancel cloning.
        Creator crashes in QObjectPrivate::isSignalConnected where "this" is 0x2:
        1   QObjectPrivate::isSignalConnected                                                                                                       qobject_p.h                    252  0x5ddb7ac5 
        2   QMetaObject::activate                                                                                                                   qobject.cpp                    3607 0x5e097ff5 
        3   QMetaObject::activate                                                                                                                   qobject.cpp                    3595 0x5e097fa1 
        4   Utils::OutputProxy::appendError                                                                                                         moc_shellcommand.cpp           192  0x5f353fcb 
        5   <lambda_6e943c5a22a805b9a74f1476c797bb00>::operator()                                                                                   shellcommand.cpp               417  0x5f269db6 
        6   QtPrivate::FunctorCall<QtPrivate::IndexesList<0>,QtPrivate::List<QString const &>,void,<lambda_6e943c5a22a805b9a74f1476c797bb00>>::call qobjectdefs_impl.h             495  0x5f26c91b 
        7   QtPrivate::Functor<<lambda_6e943c5a22a805b9a74f1476c797bb00>,1>::call<QtPrivate::List<QString const &>,void>                            qobjectdefs_impl.h             552  0x5f26a3d0 
        8   QtPrivate::QFunctorSlotObject<<lambda_6e943c5a22a805b9a74f1476c797bb00>,1,QtPrivate::List<QString const &>,void>::impl                  qobject_impl.h                 192  0x5f26cfce 
        9   QtPrivate::QSlotObjectBase::call                                                                                                        qobject_impl.h                 124  0x5e0a59ef 
        10  QMetaCallEvent::placeMetaCall                                                                                                           qobject.cpp                    493  0x5e09f587 
        11  QObject::event                                                                                                                          qobject.cpp                    1257 0x5e099bc6 
        12  QApplicationPrivate::notify_helper                                                                                                      qapplication.cpp               3804 0x5e6f84eb 
        13  QApplication::notify                                                                                                                    qapplication.cpp               3163 0x5e6f46de 
        14  QCoreApplication::notifyInternal2                                                                                                       qcoreapplication.cpp           1015 0x5e054bec 
        15  QCoreApplication::sendEvent                                                                                                             qcoreapplication.h             225  0x5e05dab9 
        16  QCoreApplicationPrivate::sendPostedEvents                                                                                               qcoreapplication.cpp           1650 0x5e055ef6 
        17  QEventDispatcherWin32::sendPostedEvents                                                                                                 qeventdispatcher_win.cpp       1287 0x5e0e9c94 
        18  QWindowsGuiEventDispatcher::sendPostedEvents                                                                                            qwindowsguieventdispatcher.cpp 76   0x5cb22e90 
        19  qt_internal_proc                                                                                                                        qeventdispatcher_win.cpp       438  0x5e0e804a 
        20  _InternalCallWinProc                                                                                                                    USER32                              0x773b84f3 
        ... <More>
        

      Creator should never crash in such a common situation. The 4.1 beta did not crash in this situation.

        1. backtrace.txt
          19 kB
          Robert Löhning
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hunger Tobias Hunger
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes